--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,16 +29,16 @@
             <div class="col-game card ">
                 <img src="chanle.jfif" alt="">
                 <div class="parameter">
-                    <p><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i>{{winT}}</p>
-                    <p><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>{{loseT}}</p>
+                    <p><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i>{{loseT}}</p>
+                    <p><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>{{winT}}</p>
                     <span></span>
                 </div>
             </div>
             <div class="col-game card">
                 <img src="rengreng.jfif" alt="">
                 <div class="parameter">
-                    <p><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i>{{winR}}</p>
-                    <p><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>{{loseR}}</p>
+                    <p><i class="fa-solid fa-up-long" style="color: #26f2b2;"></i>{{loseR}}</p>
+                    <p><i class="fa-solid fa-down-long" style="color: #ef0b0b;"></i>{{winR}}</p>
                     <span></span>
                 </div>
             </div>
